<resources>
    <string name="app_name">GameApp</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="veuillez_vous_connecter_ou_cr_er_un_nouveau_compte_pour_utiliser_l_application">Veuillez vous connecter ou\ncréer un nouveau compte\npour utiliser l\'application.</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_nouveau_compte">Créer un nouveau compte</string>
    <string name="mot_de_passe_oubli"><u>Mot de passe oublié</u></string>
    <string name="veuillez_saisir_votre_email_afin_de_r_initialiser_votre_mot_de_passe">Veuillez saisir votre email\nafin de réinitialiser votre mot de passe</string>
    <string name="mot_de_passe_oubli2">Mot de passe oublié</string>
    <string name="renvoyer_mon_mot_de_passe">Renvoyer mon mot de passe</string>
    <string name="inscription">Inscription</string>
    <string name="veuillez_saisir_ces_diff_rentes_informations_afin_que_vos_listes_soient_sauvegard_es">Veuillez saisir ces différentes informations,\nafin que vos listes soient sauvegardées.</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="v_rification_du_mot_de_passe">Vérification du mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="accueil">Accueil</string>
    <string name="wishlist">wishlist</string>
    <string name="like">like</string>
    <string name="rechercher_un_jeu">Rechercher un jeu...</string>
    <string name="jeu_accueil">jeu_accueil</string>
    <string name="jeu_accueil2">jeu_accueil2</string>
    <string name="les_meilleures_ventes"><u>Les meilleures ventes</u></string>
    <string name="titan_fall_2_ultimate_edition">Titan Fall 2\nUltimate Edition</string>
    <string name="une_description_d_un_jeu_mis_en_avant_peu_tre_fait_en_dur">Une description d\'un jeu mis en avant\n(peu être fait en dur)</string>
    <string name="en_savoir_plus">En savoir plus</string>
    <string name="meilleures_ventes">meilleures_ventes</string>
    <string name="meilleures_ventes_background">meilleures_ventes_background</string>
    <string name="nom_du_jeu">Nom du jeu</string>
    <string name="nom_de_l_diteur">Nom de l\'éditeur</string>
    <string name="prix_10_00"><u>Prix</u> : 10,00 €</string>
    <string name="mes_likes">Mes likes</string>
    <string name="close_button">close_button</string>
    <string name="empty_likes">empty_likes</string>
    <string name="vous_n_avez_encore_pas_lik_de_contenu_cliquez_sur_le_coeur_pour_en_rajouter">Vous n\'avez encore pas liké de contenu.\n\nCliquez sur le coeur pour en rajouter.</string>
    <string name="ma_liste_de_souhaits">Ma liste de souhaits</string>
    <string name="empty_wishlist">empty_wishlist</string>
    <string name="vous_n_avez_encore_pas_lik_de_contenu_cliquez_sur_l_toile_pour_en_rajouter">Vous n\'avez encore pas liké de contenu.\n\nCliquez sur l\'étoile pour en rajouter.</string>
    <string name="recherche">Recherche</string>
    <string name="stray">Stray</string>
    <string name="nombre_de_r_sultats_42"><u>Nombre de résultats : 42</u></string>
    <string name="back_button">back_button</string>
    <string name="d_tail_du_jeu">Détail du jeu</string>
    <string name="d_tail_du_jeu_image">détail_du_jeu</string>
    <string name="d_tail_du_jeu_image2">détail_du_jeu_image2</string>
    <string name="d_tail_du_jeu_image3">détail_du_jeu_image3</string>
    <string name="description">DESCRIPTION</string>
    <string name="avis">AVIS</string>
    <string name="placeholder">Bacon ipsum dolor amet rump doner brisket corned beef tri-tip. Burgdoggen t-bone leberkas, tri-tip bacon beef ribs corned beef meatball andouille fatback alcatra strip steak turkey kevin. Short loin andouille cupim boudin, hamburger burgdoggen fatback. Chislic porchetta boudin swine filet mignon tongue t-bone pancetta cupim buffalo chicken ribeye landjaeger. Sausage salami tongue, burgdoggen hamburger pork chop fatback tri-tip t-bone meatloaf alcatra. Boudin pastrami pork belly, strip steak sirloin cow hamburger beef venison</string>
    <string name="nom_de_l_utilisateur"><u>Nom de l\'utilisateur</u></string>
    <string name="placeholder2">Bacon ipsum dolor amet rump doner brisket corned beef tri-tip. Burgdoggen t-bone leberkas, tri-tip bacon beef ribs...</string>
    <string name="toile_avis">étoile_avis</string>
</resources>