<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DescriptionGameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1B2024"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1B2024">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/close_button"
                android:focusable="true"
                android:src="@drawable/close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans"
                android:text="@string/recherche"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="#1B2024">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1B2024">

            <EditText
                android:id="@+id/editText"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:background="@drawable/corners"
                android:fontFamily="@font/google_sans"
                android:hint="@string/rechercher_un_jeu"
                android:text=""
                android:importantForAutofill="no"
                android:inputType="text"
                android:minWidth="385dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="#D3D3D3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/search"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintRight_toRightOf="@+id/editText"
                app:layout_constraintTop_toTopOf="@+id/editText"
                android:background="@drawable/corners"
                app:layout_constraintBottom_toBottomOf="@+id/editText"/>

            <TextView
                android:id="@+id/textView999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans"
                android:text="@string/nombre_de_r_sultats_42"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="110dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView999">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_recherche"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>